--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
+/* src/App.css */
 .App {
   text-align: center;
+  font-family: Arial, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  padding: 50px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header {
+  margin-bottom: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.hello {
+  font-size: 1.5rem;
+  color: #333;
+}
+
+.name {
+  font-size: 3rem;
+  font-weight: bold;
+  color: #333;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.name span {
+  margin-left: 10px;
+}
+
+.title {
+  font-size: 1.5rem;
+  color: #f39c12;
+  margin: 20px 0;
+}
+
+.skills {
+  font-size: 1rem;
+  color: #666;
+  margin: 10px 0;
+}
+
+.location {
+  font-size: 1rem;
+  color: #666;
+  margin: 10px 0;
+}
+
+.cv-button {
+  background-color: #f39c12;
   color: white;
+  border: none;
+  padding: 15px 30px;
+  font-size: 1rem;
+  cursor: pointer;
+  border-radius: 5px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cv-button:hover {
+  background-color: #e67e22;
 }
